--- a/section_2/docker-compose.yml
+++ b/section_2/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../data:/app/data
+      - .:/app
